--- a/playbook.yml
+++ b/playbook.yml
@@ -3,6 +3,6 @@
   become: yes
   tasks: 
   - name: Ensure NTP is installed.
-    yum: name=ntp state=present
+    yum: name=ntp state=present use_backend=yum4
   - name: Ensure NTP is running. 
     service: name=ntpd state=started enabled=yes
